--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.discover.DiscoverActivity"/>
+        <activity
+            android:name=".ui.discover.DiscoverActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
