--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity
             android:name=".ui.discover.DiscoverActivity"
             android:exported="true" />
+        <activity android:name=".ui.detail.DetailActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
